@@ -1,9 +1,10 @@
-CHANGES.txt - 2008-11-14
+CHANGES.txt - 2008-11-17
 ------------------------
 
 CHANGES IN CUPS V1.4b2
 
 	- Documentation updates (STR #2983, STR #2998)
+	- Fixed a redirection problem with the printer web page (STR #3012)
 	- Fixed a PPD compiler problem with the loading of message
 	  catalogs (STR #2990)
 	- Fixed a PPD compiler problem with the loading of .strings files
